--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Never Ending Unsplash</title>
     <link rel="icon" type="image/png" href="http://www.google.com/s2/u/0/favicons?domain=jacinto.design">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,6 +20,7 @@
     
     </div>
     <!-- Script -->
+    <script type='text/javascript' src='config.js'></script>
     <script src="script.js"> </script>
 </body>
 </html>
